# pbg-cellpack

./: .gitignore  README.md  pyproject.toml
demo/: composite_report.py  demo_report.py  report.html
pbg_cellpack/: __init__.py  composites.py  processes.py  types.py  visualizations.py
pbg_cellpack/composites/: __init__.py  spheres-demo-with-viz.composite.yaml  spheres-demo.composite.yaml
tests/: test_composites.py  test_processes.py
