[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbg-cellpack"
version = "0.1.0"
description = "Process-bigraph wrapper for cellPACK mesoscale molecular packing"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "process-bigraph>=0.0.10",
    "bigraph-schema",
    "pbg-superpowers",
    "cellpack",
    "numpy",
    "pyyaml",
]

[tool.uv.sources]
pbg-superpowers = { git = "https://github.com/vivarium-collective/pbg-superpowers.git", branch = "main" }

[tool.setuptools.packages.find]
include = ["pbg_cellpack*"]

[project.optional-dependencies]
dev = ["pytest", "bigraph-viz", "matplotlib"]
